# celery-skinos

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
demo/: celery.py
requirements/: common.txt  dev.txt
skinos/: __init__.py  custom_consumer.py  failure_consumer.py
test/: test_custom_consumer.py
