[metadata]
name = celery-skinos
version = 1.0.4

long_description = file: README.md
long_description_content_type = text/markdown

author = di-dip-unistra
author_email = di-dip@unistra.fr

maintainer = di-dip-unistra
maintainer_email = di-dip@unistra.fr

install_requires = file: requirements.txt

license = PSF
keywords =
    celery
    AMQP
    unistra
    Université de Strasbourg

[options]
packages = find:
include_package_data = True
